--- a/TwitterClient/app/src/main/res/layout/item_tweet_media.xml
+++ b/TwitterClient/app/src/main/res/layout/item_tweet_media.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.26"/>
+        app:layout_constraintGuide_percent="0.25"/>
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/image_profile"
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:text="This is NAME "
+        android:text=""
         android:fontFamily="@font/helveticaneuebold"
         android:textColor="@color/colorSecondaryTwitter"
         app:layout_constraintEnd_toStartOf="@id/image_verified"
@@ -59,7 +59,7 @@
         android:id="@+id/name_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Name alias "
+        android:text=""
         android:fontFamily="@font/helveticaneue"
         android:textColor="@color/colorDarkGrayTwitter"
         app:layout_constraintEnd_toStartOf="@id/time"
@@ -70,7 +70,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:text="6h"
+        android:text=""
         android:fontFamily="@font/helveticaneue"
         android:textColor="@color/colorDarkGrayTwitter"
         app:layout_constraintEnd_toEndOf="parent"
@@ -83,7 +83,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:text="This is a long tweet. Welcome you! How long do you think this can last"
+        android:text=""
         android:fontFamily="@font/helveticaneue"
         android:autoLink="all"
         android:linksClickable="true"
@@ -144,6 +144,7 @@
         android:layout_height="20dp"
         android:layout_marginTop="4dp"
         android:text= ""
+        android:fontFamily="@font/helveticaneue"
         android:textColor="@color/colorDarkGrayTwitter"
         app:layout_constraintStart_toEndOf="@id/image_tweet"
         app:layout_constraintEnd_toEndOf="parent"
@@ -170,7 +171,8 @@
         android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:layout_marginTop="4dp"
-        android:text= " 9990"
+        android:text= ""
+        android:fontFamily="@font/helveticaneue"
         android:textColor="@color/colorDarkGrayTwitter"
         app:layout_constraintStart_toEndOf="@id/image_retweet"
         app:layout_constraintEnd_toEndOf="parent"
@@ -201,7 +203,8 @@
         android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:layout_marginTop="4dp"
-        android:text= " 9990"
+        android:text= ""
+        android:fontFamily="@font/helveticaneue"
         android:textColor="@color/colorDarkGrayTwitter"
         app:layout_constraintStart_toEndOf="@id/spark_button"
         app:layout_constraintEnd_toEndOf="parent"
