--- a/TwitterClient/app/src/main/res/layout/item_tweet.xml
+++ b/TwitterClient/app/src/main/res/layout/item_tweet.xml
@@ -15,7 +15,7 @@
         android:orientation="vertical"
         android:clipChildren="false"
         android:clipToPadding="false"
-        app:layout_constraintGuide_percent="0.26" />
+        app:layout_constraintGuide_percent="0.25" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/image_profile"
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/helveticaneuebold"
         android:layout_marginStart="8dp"
-        android:text="This is NAME"
+        android:text=""
         android:textColor="@color/colorSecondaryTwitter"
         app:layout_constraintEnd_toStartOf="@id/image_verified"
         app:layout_constraintHorizontal_bias="0.0"
@@ -60,7 +60,7 @@
         android:id="@+id/name_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Name alias"
+        android:text=""
         android:fontFamily="@font/helveticaneue"
         android:textColor="@color/colorDarkGrayTwitter"
         app:layout_constraintEnd_toStartOf="@id/time"
@@ -71,7 +71,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:text="6h"
+        android:text=""
         android:fontFamily="@font/helveticaneue"
         android:textColor="@color/colorDarkGrayTwitter"
         app:layout_constraintEnd_toEndOf="parent"
@@ -85,7 +85,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="8dp"
-        android:text="This is a long tweetttttttttttttttttttt. Welcome you! how long do you think this can come last"
+        android:text=""
         android:fontFamily="@font/helveticaneue"
         android:autoLink="all"
         android:linksClickable="true"
@@ -119,6 +119,7 @@
         android:layout_height="20dp"
         android:layout_marginTop="8dp"
         android:text=""
+        android:fontFamily="@font/helveticaneue"
         android:textColor="@color/colorDarkGrayTwitter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -132,7 +133,6 @@
         android:layout_height="20dp"
         android:layout_marginTop="8dp"
         android:src="@drawable/ic_retweet"
-        android:tag="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.25"
@@ -145,7 +145,8 @@
         android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:layout_marginTop="4dp"
-        android:text=" 9990"
+        android:text=""
+        android:fontFamily="@font/helveticaneue"
         android:textColor="@color/colorDarkGrayTwitter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -177,7 +178,8 @@
         android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:layout_marginTop="4dp"
-        android:text=" 9000"
+        android:text=""
+        android:fontFamily="@font/helveticaneue"
         android:textColor="@color/colorDarkGrayTwitter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
